Experimenting with Graph OLAP